[package]
name = "antithesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.2", features = ["linked"]}
ash-window = "0.12.0"
memoffset = "0.8.0"
raw-window-handle = "0.5.0"
winit = "0.28.2"

